[package]
name = "one_way_slot_map"
version = "0.4.2"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of SlotMap with minimal restrictions on Keys and Values"
readme = "README.md"
repository = "https://github.com/RookAndPawn/one_way_slot_map"
keywords = ["slotmap", "storage"]
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
static_assertions = "1.1.0"
criterion = "0.3"
rand = "0.8.4"
slotmap = "1.0.6"

[[bench]]
name = "slotmap_comparison"
harness = false